fix benchmark params